--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@layer components {
-
-
-
-
-}
 
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-html #app body{
-    height: 100%;
+html body #app {
     font-family: Roboto, ui-sans-serif, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji, system-ui;
 }
 
