--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
     margin: 0;
 }
 html body #app {
+    height: 100vh;
     font-family: Roboto, ui-sans-serif, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji, system-ui;
 }
 
