--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,20 @@ html body #app {
     font-family: Roboto, ui-sans-serif, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji, system-ui;
 }
 
+/* 全局改变滚动条颜色 */
+
+
+/* 滚动条轨道颜色 */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; /* 轨道颜色 */
+}
+
+/* 滚动条滑块颜色 */
+::-webkit-scrollbar-thumb {
+    background: #888; /* 滑块颜色 */
+}
+
+/* 滑块在hover时的颜色 */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; /* hover时滑块颜色 */
+}
